syntax = "proto3";

package MasterSDKService;

service MasterServiceSDK {
  rpc ExecuteTask (ExecuteTaskRequest) returns (ExecuteTaskResponse) {}
  rpc CancelTask (CancelTaskRequest) returns (CancelTaskResponse) {}
  rpc GetJobStatus (GetJobStatusRequest) returns (GetJobStatusResponse) {}
  rpc GetJobResult (GetJobResultRequest) returns (GetJobResultResponse) {}
}

message ExecuteTaskRequest {
  bytes data = 1;
}

message ExecuteTaskResponse {
  string jobId = 1;
  string errorMessage = 2 ;
}

message CancelTaskRequest {
  string jobId = 1;
}

message CancelTaskResponse {
  bool success = 1;
}

message GetJobStatusRequest {
  string jobId = 1;
}

message GetJobStatusResponse {
  
}

message GetJobResultRequest {
  string jobId = 1;
}

message GetJobResultResponse {
  bytes result = 1;
}